# brokerkit

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch_upstox.py
.github/workflows/: codeql.yml  tests.yml
docs/: 01-project-vision.md  ROADMAP.md
examples/: README.md
examples/angelone/: main.py
examples/basic/: main.py
examples/dhan/: main.py
examples/fyers/: main.py
examples/groww/: main.py
examples/upstox/: main.py
examples/zerodha/: main.py
tests/: __init__.py  conftest.py  support.py  test_angelone_mapper.py  test_contracts.py  test_core_assembly.py  test_core_models.py  test_dhan_mapper.py  test_fyers_mapper.py  test_groww_mapper.py  test_live_smoke.py  test_type_hints.py  test_upstox_mapper.py  test_zerodha_mapper.py
