[project]
name = "brokerkit-core"
version = "0.1.0"
description = "Core abstractions and interfaces for BrokerKit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Aditya Vishwakarma" }
]

keywords = [
    "broker",
    "trading",
    "stocks",
    "finance",
    "adapter",
    "sdk",
    "python",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]